<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- POCO X3 specific settings -->
    <string name="device_specific_settings_title">Device-specific settings</string>
    <string name="device_specific_settings_summary">Cutout and refresh rate configuration</string>
    <string name="device_min_refresh_rate">Minimum Refresh Rate</string>
    <string name="device_hide_camera_cutout">Hide camera cutout</string>
    <string name="msg_device_need_restart">Please restart device for this to take effect.</string>

    <string name="device_dynamic_fps">Dynamic FPS</string>
    <string name="device_blur">Blur effect</string>
    <string name="device_blur_summary">Require restart!</string>

    <string name="device_gpu_scale">Scale GPU</string>
    <string name="device_gpu_scale_summary">Scale GPU frequency based on current refresh rate</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_scenario_title">Scenario</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_manual">Manual</string>
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <string name="dirac_scenario_voice">Voice</string>
    <string name="dirac_scenario_music">Music</string>
    <string name="dirac_scenario_movie">Movie</string>
    <string name="dirac_scenario_smart">Auto</string>

    <string name="dirac_surround_level_title">Surround</string>
    <string name="dirac_surround_level_summary">Surround sound level</string>
    <string name="dirac_voice_level_title">Vocal</string>
    <string name="dirac_voice_level_summary">Vocal accent level</string>

    <string name="dirac_eq_settings">Equalizer</string>
    <string name="dirac_eq_band_0">65 Hz</string>
    <string name="dirac_eq_band_1">160 Hz</string>
    <string name="dirac_eq_band_2">400 Hz</string>
    <string name="dirac_eq_band_3">1 KHz</string>
    <string name="dirac_eq_band_4">2.5 KHz</string>
    <string name="dirac_eq_band_5">6 KHz</string>
    <string name="dirac_eq_band_6">14 KHz</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>


</resources>
